2002-01-02  Bruce Johnson  <bruce_johnson@merck.com>,
            Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Channel.java (Channel, setEncoding):
	Add default constructor that will set the encoding at
	channel creation time. Move Tcl channel name logic into
	fconfigure command and call EncodingCmd.getBytesPerChar
	to cache the number of bytes per char for the channel.
	* src/jacl/tcl/lang/EncodingCmd.java: Add initial
	implementation of the encoding command.
	* src/jacl/tcl/lang/FconfigureCmd.java (cmdProc): Add
	logic to translate from Tcl encoding names to Java
	encoding names and vice versa.
	* src/jacl/tcl/lang/Interp.java (createCommands): Add
	encoding command to interp cmd table.

2001-12-25  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Channel.java (close):
	Check for a custom output eof character and
	write it to the stream before closing.
	* src/jacl/tcl/lang/FileChannel.java (close):
	Invoke super class close method before closing
	actual stream in case custom EOF is written.
	Reformat some tabs into spaces.
	* src/jacl/tcl/lang/ServerSocketChannel.java (close):
	Invoke super class close method before closing
	actual stream. Add FIXME note.
	* src/jacl/tcl/lang/SocketChannel.java (close):
	Invoke super class close method before closing
	actual stream in case custom EOF is written.

2001-12-25  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Channel.java (read, write,
	flush, checkRead, checkWrite): Implement and use
	new helper methods that check to see if reading
	or writing is allowed on a Channel. The old logic
	was incorrect in the case of a server socket which
	is neither readable nor writeable.
	* src/jacl/tcl/lang/FconfigureCmd.java (cmdProc):
	Handle server socket case which is neither readable
	not writeable the same as standard Tcl.
	* src/jacl/tcl/lang/FileChannel.java (write, flush):
	Call new checkWrite method instead of invoking
	super class method to check the writable property.
